src/ui/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-ui-ingress
  namespace: retail-store
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: retail-store.local
      http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: store-ui-retail-store-sample-ui-chart
                port:
                  number: 8080
